--- a/src/components/login.css
+++ b/src/components/login.css
@@ -32,7 +32,7 @@
     letter-spacing: -1px;
 }
 .login__form >input {
-    /* width: 80%; */
+    width: 80%;
   box-sizing: border-box;
 	border: none;
   font-size: 1.3rem;
